[package]
name = "fast-tools"
version = "0.1.2"
authors = ["Alexey McSakoff <mcsakoff@gmail.com>"]
categories = ["parser-implementations", "encoding"]
description = "FAST (FIX Adapted for STreaming protocol) encoding/decoding tools"
edition = "2021"
keywords = ["fix", "fast", "protocol", "parser"]
license = "MIT"
repository = "https://github.com/mcsakoff/rs-fast-tools"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fastlib = { version = "0.3.1", default-features = false, features = [] }
env_logger = "0.11"
humantime = "2.1"
log = "0.4"
